--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
-
 <script src="//coding4medicine.com/static/js/jquery-2.2.3.min.js"></script>
+<script src="//coding4medicine.com/static/js/jquery-ujs.js"></script>
 <script src="//coding4medicine.com/static/js/bootstrap.min.js"></script>
 <script src="//coding4medicine.com/static/js/app.min.js"></script>
 <script src="//coding4medicine.com/static/main.js"></script>
 </body>
 </html>
+
