--- a/app/views/layouts/atgcfront.html.erb
+++ b/app/views/layouts/atgcfront.html.erb
@@ -1,102 +1,449 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Microbial genomics</title>
 
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://atgc.work/assets/css/styles_feeling_responsive.css">
 
-  <title>Welcome</title>
-  <meta name="description" content="Coding4medicine enables life scientists code confidently.">
+  
 
-  <link rel="stylesheet" href="//coding4medicine.com/static/main.css">
-<%= csrf_meta_tags %>
+	<script src="https://atgc.work/assets/js/modernizr.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+	<script>
+		WebFont.load({
+			google: {
+				families: [ 'Lato:400,700,400italic:latin', 'Volkhov::latin' ]
+			}
+		});
+	</script>
+
+	<noscript>
+		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic%7CVolkhov' rel='stylesheet' type='text/css'>
+	</noscript>
+
+
+	<!-- Search Engine Optimization -->
+	<meta name="description" content="Top Resources on Bioinformatics.">
+	
+	
+	
+	
+	
+	<meta name="robots" content="noindex">
+	<link rel="canonical" href="https://atgc.work/index.html">
+
+
+	<!-- Facebook Open Graph -->
+	<meta property="og:title" content="Microbial genomics">
+	<meta property="og:description" content="Top Resources on Bioinformatics.">
+	<meta property="og:url" content="https://atgc.work/index.html">
+	<meta property="og:locale" content="en_EN">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Microbial genomics">
+	
+	
+
+
+	
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="coding4medicine">
+	<meta name="twitter:creator" content="coding4medicine">
+	<meta name="twitter:title" content="Microbial genomics">
+	<meta name="twitter:description" content="Top Resources on Bioinformatics.">
+	
+	
+
+	<link type="text/plain" rel="author" href="https://atgc.work/humans.txt">
+
+	
+
+	
+
+	<link rel="icon" sizes="32x32" href="/assets/img/favicon-32x32.png">
+
+	<link rel="icon" sizes="192x192" href="/assets/img/touch-icon-192x192.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="/assets/img/apple-touch-icon-180x180-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/img/apple-touch-icon-152x152-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/apple-touch-icon-144x144-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/img/apple-touch-icon-120x120-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/apple-touch-icon-114x114-precomposed.png">
+
+	
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/img/apple-touch-icon-76x76-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/apple-touch-icon-72x72-precomposed.png">
+
+	<link rel="apple-touch-icon-precomposed" href="/assets/img/apple-touch-icon-precomposed.png">	
+
+	<meta name="msapplication-TileImage" content="/assets/img/msapplication_tileimage.png">
+
+	<meta name="msapplication-TileColor" content="#fabb00">
+
+
+	
+
 </head>
+<body id="top-of-page" class="frontpage">
+	
+	<div id="navigation" class="sticky">
+  <nav class="top-bar" role="navigation" data-topbar>
+    <ul class="title-area">
+      <li class="name">
+      <h1 class="show-for-small-only"><a href="https://atgc.work" class="icon-tree"> Microbial genomics</a></h1>
+    </li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Nav</span></a></li>
+    </ul>
+    <section class="top-bar-section">
 
-
-  <body>
-
-    <header class="site-header">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="/">ATGC</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-      <div class="trigger">
+      <ul class="right">
         
+
+              
+
+          
           
         
-      </div>
-    </nav>
 
-  </div>
-
-</header>
-
-
-    <div class="page-content">
-      <div class="wrapper">
-        <article class="post" itemscope itemtype="//schema.org/BlogPosting">
-
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">Welcome</h1>
-    <p class="post-meta"><time datetime="2016-10-03T01:21:52+00:00" itemprop="datePublished">Oct 3, 2016</time></p>
-  </header>
-
-  <div class="post-content" itemprop="articleBody">
-
-<%= yield %>
-
-  </div>
-
-</article>
-
-      </div>
-    </div>
-
-    <footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">Coding for Medicine</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>Coding for Medicine</li>
-          <li><a href="mailto:info@coding4medicine.com">info@coding4medicine.com</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          
+              
 
           
-        </ul>
-      </div>
+          
+            
+            
 
-      <div class="footer-col footer-col-3">
-        <p>Helping life scientists code confidently.
-</p>
-      </div>
-    </div>
+              <li class="divider"></li>
+              <li class="has-dropdown">
+                <a  href="https://atgc.work/blog/">Announcements</a>
 
-  </div>
+                  <ul class="dropdown">
+                    
 
-</footer>
+                      
+
+                      <li><a  href="https://atgc.work/blog/archive/">Blog Archive</a></li>
+                    
+                  </ul>
+
+              </li>
+            
+          
+        
+
+              
+
+          
+          
+        
+
+              
+
+          
+          
+            
+            
+              <li class="divider"></li>
+              <li><a  href="https://atgc.work/contact/">Contact</a></li>
+
+            
+            
+          
+        
+        
+      </ul>
+
+      <ul class="left">
+        
+
+              
+
+          
+          
+
+            
+            
+              <li class="active"><a  href="https://atgc.work/">Start</a></li>
+              <li class="divider"></li>
+
+            
+            
+          
+        
+
+              
+
+          
+          
+        
+
+              
+
+          
+          
+
+            
+            
+              <li><a  href="https://atgc.work/Members/pages/home/">Members</a></li>
+              <li class="divider"></li>
+
+            
+            
+          
+        
+
+              
+
+          
+          
+        
+        
+      </ul>
+    </section>
+  </nav>
+</div><!-- /#navigation -->
+
+	
+
+	
+
+<div id="masthead">
+	<div class="row">
+		<div class="small-12 columns">
+			<a id="logo" href="/" title="Microbial genomics – Microbial genomics">
+				<img src="https://atgc.work/assets/img/logo.png" alt="Microbial genomics – Microbial genomics">
+			</a>
+		</div><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 
-  </body>
 
+
+
+
+
+
+
+
+	<div id="header-home">
+    <div class="row">
+        <div class="small-12 columns">
+        </div><!-- /.medium-4.columns -->
+    </div><!-- /.row -->
+</div><!-- /#header-home -->
+
+
+
+<div class="row t60">
+	
+		<div class="medium-4 columns frontpage-widget">
+	
+	
+		<a href="https://atgc.work/blog">
+			
+				
+				
+				
+				
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Acidobacterium.jpg/220px-Acidobacterium.jpg" alt="" />
+				
+			
+		</a>
+	
+	<h2 class="font-size-h3 t10">Microbial bioinformatics</h2>
+	<p>This site presents tools and techniques to analyze microbial data and take advantage of the next-generation sequencing techniques.</p>
+	<p><a class="button tiny radius" href="https://atgc.work/blog">More ›</a></p>
+</div>
+	
+
+
+	
+		<div class="medium-4 columns frontpage-widget">
+	
+	
+		<a href="https://atgc.work/Members/pages/home">
+			
+				
+				
+				
+				
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Treponema_pallidum_01.png/220px-Treponema_pallidum_01.png" alt="" />
+				
+			
+		</a>
+	
+	<h2 class="font-size-h3 t10">Members</h2>
+	<p></p>
+	<p><a class="button tiny radius" href="https://atgc.work/Members/pages/home">More ›</a></p>
+</div>
+	
+
+
+	
+		<div class="medium-4 columns frontpage-widget">
+	
+	
+		<a href="https://atgc.work/blog">
+			
+				
+				
+				
+				
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Halobacteria.jpg/200px-Halobacteria.jpg" alt="" />
+				
+			
+		</a>
+	
+	<h2 class="font-size-h3 t10">Latest updates</h2>
+	<p>Jan 3 - Website updated.</p>
+	<p><a class="button tiny radius" href="https://atgc.work/blog">More ›</a></p>
+</div>
+	
+</div><!-- /.row -->
+
+
+
+
+
+
+    <div class="row t60 b60">
+        <div class="small-12 text-center columns">
+            <a class="button large radius alert" href="https://atgc.work/Members/users/sign_up">Be a member and enjoy our great tutorials.</a>
+        </div><!-- /.small-12.columns -->
+    </div><!-- /.row -->
+
+
+
+
+
+
+
+
+
+
+
+<div class="row">
+    
+
+</div><!-- /.row -->
+
+
+	
+	    <div id="up-to-top" class="row">
+      <div class="small-12 columns" style="text-align: right;">
+        <a class="iconfont" href="#top-of-page">&#xf108;</a>
+      </div><!-- /.small-12.columns -->
+    </div><!-- /.row -->
+
+
+    <footer id="footer-content" class="bg-grau">
+      <div id="footer">
+        <div class="row">
+          <div class="medium-6 large-5 columns">
+            <h5 class="shadow-black">About This Site</h5>
+
+            <p class="shadow-black">
+              Top Resources on Bioinformatics.
+              <a href="https://atgc.work/info/">More ›</a>
+            </p>
+          </div><!-- /.large-6.columns -->
+
+
+          <div class="small-6 medium-3 large-3 large-offset-1 columns">
+            
+
+              <ul class="no-bullet shadow-black">
+              
+              </ul>
+          </div><!-- /.large-4.columns -->
+
+
+          <div class="small-6 medium-3 large-3 columns">
+            
+              
+                <h5 class="shadow-black">Credits</h5>
+              
+            
+              
+            
+              
+            
+
+            <ul class="no-bullet shadow-black">
+            
+              
+                <li >
+                  <a href="https://atgc.work"  title=""></a>
+                </li>
+            
+              
+                <li class="services-newsletter" >
+                  <a href="http://foundation.zurb.com/" target="_blank"  title="Built on Foundation">Built on Foundation</a>
+                </li>
+            
+              
+                <li class="services-newsletter" >
+                  <a href="https://github.com/Phlow/feeling-responsive" target="_blank"  title="Theme: Feeling Responsive">Feeling Responsive Theme</a>
+                </li>
+            
+            </ul>
+          </div><!-- /.large-3.columns -->
+        </div><!-- /.row -->
+
+      </div><!-- /#footer -->
+
+
+      <div id="subfooter">
+        <nav class="row">
+          <section id="subfooter-left" class="small-12 medium-6 columns credits">
+            
+          </section>
+
+          <section id="subfooter-right" class="small-12 medium-6 columns">
+            <ul class="inline-list social-icons">
+            
+              <li><a href="http://twitter.com/coding4medicine" target="_blank" class="icon-twitter" title="Coding4medicine"></a></li>
+            
+            </ul>
+          </section>
+        </nav>
+      </div><!-- /#subfooter -->
+    </footer>
+
+	
+
+	
+
+
+<script src="https://atgc.work/assets/js/javascript.min.js"></script>
+
+
+
+<script>
+    $("#masthead").backstretch("https://phlow.github.io/feeling-responsive/images/header_unsplash_5.jpg", {fade: 700});
+    $("#masthead-with-text").backstretch("https://phlow.github.io/feeling-responsive/images/header_unsplash_5.jpg", {fade: 700});
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
 </html>
 
