--- a/app/views/layouts/c4m.html.erb
+++ b/app/views/layouts/c4m.html.erb
@@ -11,11 +11,12 @@
       <ul class="sidebar-menu">
         <li class="header">MAIN NAVIGATION</li>
         <li>
-          <a href="/Members/Materials/daily/201603/day9.html" target="_blank">
+          <a href="/Members/Materials/daily/201701/day1.html" target="_blank">
             <i class="fa fa-calendar"></i> <span>Daily updates</span>
-            <small class="label pull-right bg-red">2016/3/9</small>
+            <small class="label pull-right bg-red">2017/01/01</small>
           </a>
         </li>
+
 
         <li class="treeview">
           <a href="#">
@@ -24,10 +25,23 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/pages/objective.html" ><i class="fa fa-circle-o"></i> What we plan to accomplish</a></li>
-            <li><a href="/pages/examples.html" ><i class="fa fa-circle-o"></i> Starting example</a></li>
-            <li><a href="/pages/instructions.html" ><i class="fa fa-circle-o"></i> Login instructions</a></li>
-            <li><a href="/pages/data.html" ><i class="fa fa-circle-o"></i> Data sets</a></li>
+	
+		<li><a href="/pages/objective.html" target="_blank"><i class="fa fa-circle-o"></i> What we plan to accomplish </a></li>
+		<li><a href="/pages/guide.html" target="_blank"><i class="fa fa-circle-o"></i> Study guide for beginners </a></li>
+		<li><a href="/pages/instructions.html" target="_blank"><i class="fa fa-circle-o"></i> Login instructions </a></li>
+		<li><a href="/pages/data.html" target="_blank"><i class="fa fa-circle-o"></i> Examples and data </a></li>
+          </ul>
+        </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>R</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+	
+		<li><a href="/Members/Materials/R/index.html" target="_blank"><i class="fa fa-circle-o"></i> R for biology </a></li>
           </ul>
         </li>
 
@@ -38,24 +52,14 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/linux/index.html" target="_blank"><i class="fa fa-circle-o"></i> Unix/linux tutorial</a></li>
-            <li><a href="/Members/Materials/scripting/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python tutorial</a></li>
+	
+		<li><a href="/Members/Materials/linux/index.html" target="_blank"><i class="fa fa-circle-o"></i> Unix/linux tutorial </a></li>
+		<li><a href="/Members/Materials/hspython1/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python - get started </a></li>
+		<li><a href="/Members/Materials/hspython2/index.html" target="_blank"><i class="fa fa-circle-o"></i> Solve easy problems </a></li>
+		<li><a href="/Members/Materials/hspython3/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python - more concepts </a></li>
+		<li><a href="/Members/Materials/hspython4/index.html" target="_blank"><i class="fa fa-circle-o"></i> Solve bioinformatics problems </a></li>
           </ul>
         </li>
-
-
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-laptop"></i>
-            <span>Long reads</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pacbio/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/pacbio/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
-          </ul>
-        </li>
-
 
         <li class="treeview">
           <a href="#">
@@ -64,10 +68,24 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/assembly/index.html" target="_blank"><i class="fa fa-circle-o"></i> Short read assembly</a></li>
+	
+		<li><a href="/Members/Materials/hspython5/index.html" target="_blank"><i class="fa fa-circle-o"></i> Assembly jigsaw puzzle </a></li>
+		<li><a href="/Members/Materials/assembly/index.html" target="_blank"><i class="fa fa-circle-o"></i> Short read assembly </a></li>
+		<li><a href="/Members/Materials/kmer/index.html" target="_blank"><i class="fa fa-circle-o"></i> Kmer Magic </a></li>
           </ul>
         </li>
 
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>Long reads</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+	
+		<li><a href="/Members/Materials/pacbio/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial and programs </a></li>
+          </ul>
+        </li>
 
         <li class="treeview">
           <a href="#">
@@ -76,30 +94,41 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/rnaseq/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/rnaseq/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
+	
+		<li><a href="/Members/Materials/rnaseq/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial and Programs </a></li>
           </ul>
         </li>
 
         <li class="treeview">
           <a href="#">
             <i class="fa fa-laptop"></i>
-            <span>Programs</span>
+            <span>Bioinformatics programs</span>
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
+	
+		<li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox </a></li>
           </ul>
         </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>Bioinformatics algorithms</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+	
+		<li><a href="/Members/Materials/algorithm/index.html" target="_blank"><i class="fa fa-circle-o"></i> Algorithms </a></li>
+		<li><a href="/Members/Materials/bwt/index.html" target="_blank"><i class="fa fa-circle-o"></i> Burrows Wheeler transform </a></li>
+		<li><a href="/Members/Materials/bloom/index.html" target="_blank"><i class="fa fa-circle-o"></i> Bloom filters </a></li>
+          </ul>
+        </li>
+
 
     </section>
     <!-- /.sidebar -->
   </aside>
-
-
-
-
-
 
 
 
@@ -117,6 +146,9 @@
 
     <!-- Main content -->
     <section class="content">
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
 
 <%= yield %>
 
@@ -128,3 +160,4 @@
 </div>
 
 <%= render "layouts/footer" %>
+
