--- a/app/views/layouts/c4mfront.html.erb
+++ b/app/views/layouts/c4mfront.html.erb
@@ -53,6 +53,9 @@
   </header>
 
   <div class="post-content" itemprop="articleBody">
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
 
 <%= yield %>
 
@@ -99,4 +102,5 @@
   </body>
 
 </html>
+
 
