--- a/app/views/layouts/hs.html.erb
+++ b/app/views/layouts/hs.html.erb
@@ -10,6 +10,28 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
         <li class="header">MAIN NAVIGATION</li>
+        <li>
+          <a href="/Members/Materials/daily-hs/201701/day1.html" target="_blank">
+            <i class="fa fa-calendar"></i> <span>Daily updates</span>
+            <small class="label pull-right bg-red">2017/01/01</small>
+          </a>
+        </li>
+
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>If you are new here</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+	
+		<li><a href="/pages/objective.html" target="_blank"><i class="fa fa-circle-o"></i> What we plan to accomplish </a></li>
+		<li><a href="/pages/guide.html" target="_blank"><i class="fa fa-circle-o"></i> Study guide for beginners </a></li>
+		<li><a href="/pages/instructions.html" target="_blank"><i class="fa fa-circle-o"></i> Login instructions </a></li>
+		<li><a href="/pages/data.html" target="_blank"><i class="fa fa-circle-o"></i> Examples and data </a></li>
+          </ul>
+        </li>
 
         <li class="treeview">
           <a href="#">
@@ -18,9 +40,10 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/linux/index.html" target="_blank"><i class="fa fa-circle-o"></i>Unix/linux tutorial</a></li>
-            <li><a href="/Members/Materials/github/index.html" target="_blank"><i class="fa fa-circle-o"></i>Github for sharing code</a></li>
-            <li><a href="/Members/Materials/regexp/index.html" target="_blank"><i class="fa fa-circle-o"></i>Regular expression</a></li>
+	
+		<li><a href="/Members/Materials/linux/index.html" target="_blank"><i class="fa fa-circle-o"></i> Unix/linux tutorial </a></li>
+		<li><a href="/Members/Materials/github/index.html" target="_blank"><i class="fa fa-circle-o"></i> Github for sharing code </a></li>
+		<li><a href="/Members/Materials/regexp/index.html" target="_blank"><i class="fa fa-circle-o"></i> Regular expression </a></li>
           </ul>
         </li>
 
@@ -31,13 +54,13 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/hspython1/index.html" target="_blank"><i class="fa fa-circle-o"></i>Python - get started</a></li>
-            <li><a href="/Members/Materials/hspython2/index.html" target="_blank"><i class="fa fa-circle-o"></i>Solve easy problems</a></li>
-            <li><a href="/Members/Materials/hspython3/index.html" target="_blank"><i class="fa fa-circle-o"></i>Python - more concepts</a></li>
-            <li><a href="/Members/Materials/hspython4/index.html"><i class="fa fa-circle-o"></i>Solve bioinformatics problems</a></li>
+	
+		<li><a href="/Members/Materials/hspython1/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python - get started </a></li>
+		<li><a href="/Members/Materials/hspython2/index.html" target="_blank"><i class="fa fa-circle-o"></i> Solve easy problems </a></li>
+		<li><a href="/Members/Materials/hspython3/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python - more concepts </a></li>
+		<li><a href="/Members/Materials/hspython4/index.html" target="_blank"><i class="fa fa-circle-o"></i> Solve bioinformatics problems </a></li>
           </ul>
         </li>
-
 
         <li class="treeview">
           <a href="#">
@@ -46,12 +69,10 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/hspython5/index.html" target="_blank"><i class="fa fa-circle-o"></i>Solve jigsaw puzzle</a></li>
+	
+		<li><a href="/Members/Materials/hspython5/index.html" target="_blank"><i class="fa fa-circle-o"></i> Solve jigsaw puzzle </a></li>
           </ul>
         </li>
-
-
-
 
         <li class="treeview">
           <a href="#">
@@ -60,8 +81,9 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/hs-blast/index.html" target="_blank"><i class="fa fa-circle-o"></i>BLAST</a></li>
-            <li><a href="/Members/Materials/hs-muscle/index.html" target="_blank"><i class="fa fa-circle-o"></i>MUSCLE</a></li>
+	
+		<li><a href="/Members/Materials/hs-blast/index.html" target="_blank"><i class="fa fa-circle-o"></i> BLAST </a></li>
+		<li><a href="/Members/Materials/hs-muscle/index.html" target="_blank"><i class="fa fa-circle-o"></i> MUSCLE </a></li>
           </ul>
         </li>
 
@@ -72,11 +94,12 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/hs-ncbi-blast/index.html" target="_blank"><i class="fa fa-circle-o"></i>NCBI BLAST</a></li>
-            <li><a href="/Members/Materials/hs-uniprot/index.html" target="_blank"><i class="fa fa-circle-o"></i>Uniprot</a></li>
-            <li><a href="/Members/Materials/hs-yeast/index.html" target="_blank"><i class="fa fa-circle-o"></i>Yeast database</a></li>
-            <li><a href="/Members/Materials/hs-ucsc/index.html" target="_blank"><i class="fa fa-circle-o"></i>UC Santa Cruz</a></li>
-            <li><a href="/Members/Materials/hs-ncbi/index.html" target="_blank"><i class="fa fa-circle-o"></i>NCBI</a></li>
+	
+		<li><a href="/Members/Materials/hs-ncbi-blast/index.html" target="_blank"><i class="fa fa-circle-o"></i> NCBI BLAST </a></li>
+		<li><a href="/Members/Materials/hs-uniprot/index.html" target="_blank"><i class="fa fa-circle-o"></i> Uniprot </a></li>
+		<li><a href="/Members/Materials/hs-yeast/index.html" target="_blank"><i class="fa fa-circle-o"></i> Yeast database </a></li>
+		<li><a href="/Members/Materials/hs-ucsc/index.html" target="_blank"><i class="fa fa-circle-o"></i> UC Santa Cruz </a></li>
+		<li><a href="/Members/Materials/hs-ncbi/index.html" target="_blank"><i class="fa fa-circle-o"></i> NCBI </a></li>
           </ul>
         </li>
 
@@ -84,6 +107,7 @@
     </section>
     <!-- /.sidebar -->
   </aside>
+
 
 
       <!-- Content Wrapper. Contains page content -->
@@ -99,6 +123,9 @@
 
     <!-- Main content -->
     <section class="content">
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
 
 <%= yield %>
 
@@ -110,3 +137,4 @@
 </div>
 
 <%= render "layouts/footer" %>
+
