--- a/app/views/sshkeys/new.html.erb
+++ b/app/views/sshkeys/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Upload your sshkey</h1>
+<h1>Upload your ssh public key</h1>
 
 <%= render 'form', sshkey: @sshkey %>
 
 <%= link_to 'Back', sshkeys_path %>
+
