--- a/app/views/c4mpages/home.html.erb
+++ b/app/views/c4mpages/home.html.erb
@@ -15,24 +15,13 @@
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <p>Starting example</p>
+              <p>Study guide for beginners</p>
             </div>
-            <a href="/pages/examples.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/guide.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
 
-
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-yellow">
-            <div class="inner">
-              <p>Data files</p>
-            </div>
-            <a href="/pages/data.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
         <div class="col-lg-3 col-xs-6">
           <!-- small box -->
           <div class="small-box bg-red">
@@ -44,6 +33,79 @@
         </div>
         <!-- ./col -->
 
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-yellow">
+            <div class="inner">
+              <p>Starting example and data files</p>
+            </div>
+            <a href="/pages/data.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
 
       </div>
       <!-- /.row -->
+
+
+
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Welcome - Nov. 16, 2016</b></h3>
+
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+	We are relaunching the site after months of work. The following email had been sent to all researchers, who registered at the website. <A href=https://coding4medicine.com/Members/Materials/daily/201611/day16.html>continue..</A>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Server Instructions - Nov. 17, 2016</b></h3>
+
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+	Thank you all for joining the site. Looks like none of you ventured into creating server account yet, and we take that as our fault that the instructions are not very clear. Over the next week, <A href=https://coding4medicine.com/Members/Materials/daily/201611/day17.html>continue..</A>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Updated and new tutorials - Dec. 13, 2016</b></h3>
+
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+	We released new tutorials on using R, Burrows Wheeler transform and Bloom filters. Also, we are working extensively on the RNAseq tutorials to cover recent papers. <A href=https://coding4medicine.com/Members/Materials/daily/201612/day13.html>continue..</A>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+
+
+
+
