--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,10 @@
     <p class="login-box-msg">Edit <%= resource_name.to_s.humanize %></p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <div class="form-group has-feedback">
+        <input autofocus="autofocus" type="name" class="form-control" placeholder="Name" value="<%= @user.name %>" name="user[name]" id="user_name">
+        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+      </div>
+    <div class="form-group has-feedback">
         <input autofocus="autofocus" type="email" class="form-control" placeholder="Email" value="<%= @user.email %>" name="user[email]" id="user_email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
@@ -31,3 +35,4 @@
 <% end %>
 
 <%= link_to "Back", :back %>
+
