--- a/app/views/layouts/atgc.html.erb
+++ b/app/views/layouts/atgc.html.erb
@@ -10,7 +10,28 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
         <li class="header">MAIN NAVIGATION</li>
+        <li>
+          <a href="/Members/Materials/daily-atgc/201701/day1.html" target="_blank">
+            <i class="fa fa-calendar"></i> <span>Daily updates</span>
+            <small class="label pull-right bg-red">2017/01/01</small>
+          </a>
+        </li>
 
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>If you are new here</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+	
+		<li><a href="/pages/objective.html" target="_blank"><i class="fa fa-circle-o"></i> What we plan to accomplish </a></li>
+		<li><a href="/pages/guide.html" target="_blank"><i class="fa fa-circle-o"></i> Study guide for beginners </a></li>
+		<li><a href="/pages/instructions.html" target="_blank"><i class="fa fa-circle-o"></i> Login instructions </a></li>
+		<li><a href="/pages/data.html" target="_blank"><i class="fa fa-circle-o"></i> Examples and data </a></li>
+          </ul>
+        </li>
 
         <li class="treeview">
           <a href="#">
@@ -19,8 +40,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/metagenomics/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/metagenomics/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
+	
+		<li><a href="/Members/Materials/metagenomics/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial and programs </a></li>
           </ul>
         </li>
 
@@ -31,13 +52,16 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
+	
+		<li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox </a></li>
           </ul>
         </li>
+
 
     </section>
     <!-- /.sidebar -->
   </aside>
+
 
 
       <!-- Content Wrapper. Contains page content -->
@@ -53,6 +77,9 @@
 
     <!-- Main content -->
     <section class="content">
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
 
 <%= yield %>
 
@@ -64,3 +91,4 @@
 </div>
 
 <%= render "layouts/footer" %>
+
