--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,11 +11,15 @@
   <link rel="stylesheet" href="//coding4medicine.com/static/css/AdminLTE.min.css">
   <link rel="stylesheet" href="//coding4medicine.com/static/css/blue.css">
 <%= csrf_meta_tags %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
+
 <%= yield %>
 
 <script src="//coding4medicine.com/static/js/jquery-2.2.3.min.js"></script>
+<script src="//coding4medicine.com/static/js/jquery-ujs.js"></script>
 <script src="//coding4medicine.com/static/js/bootstrap.min.js"></script>
 <script src="//coding4medicine.com/static/js/icheck.min.js"></script>
 <script>
@@ -29,3 +33,4 @@
 </script>
 </body>
 </html>
+
