--- a/app/views/layouts/hsfront.html.erb
+++ b/app/views/layouts/hsfront.html.erb
@@ -54,6 +54,10 @@
 
   <div class="post-content" itemprop="articleBody">
 
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
+
 <%= yield %>
 
   </div>
