--- a/app/views/layouts/rnafront.html.erb
+++ b/app/views/layouts/rnafront.html.erb
@@ -13,7 +13,6 @@
 <%= csrf_meta_tags %>
 </head>
 
-
   <body>
 
     <header class="site-header">
@@ -33,15 +32,12 @@
 
       <div class="trigger">
         
-          
-        
       </div>
     </nav>
 
   </div>
 
 </header>
-
 
     <div class="page-content">
       <div class="wrapper">
@@ -53,6 +49,9 @@
   </header>
 
   <div class="post-content" itemprop="articleBody">
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
 
 <%= yield %>
 
@@ -99,4 +98,5 @@
   </body>
 
 </html>
+
 
