--- a/app/views/rnapages/home.html.erb
+++ b/app/views/rnapages/home.html.erb
@@ -15,24 +15,13 @@
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <p>Starting example</p>
+              <p>Study guide for beginners</p>
             </div>
-            <a href="/pages/examples.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/guide.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
 
-
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-yellow">
-            <div class="inner">
-              <p>Data files</p>
-            </div>
-            <a href="/pages/data.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-        <!-- ./col -->
         <div class="col-lg-3 col-xs-6">
           <!-- small box -->
           <div class="small-box bg-red">
@@ -44,6 +33,41 @@
         </div>
         <!-- ./col -->
 
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-yellow">
+            <div class="inner">
+              <p>Starting example and data files</p>
+            </div>
+            <a href="/pages/data.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
 
       </div>
       <!-- /.row -->
+
+
+
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Welcome - Nov. 16, 2016</b></h3>
+
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+	We are starting again.... <A href=>continue..</A>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+
+
+
+
