--- a/app/views/sshkeys/edit.html.erb
+++ b/app/views/sshkeys/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Sshkey</h1>
+<h1>Editing ssh public key</h1>
 
 <%= render 'form', sshkey: @sshkey %>
 
 <%= link_to 'Show', @sshkey %> |
 <%= link_to 'Back', sshkeys_path %>
+
