--- a/app/views/sshkeys/index.html.erb
+++ b/app/views/sshkeys/index.html.erb
@@ -1,20 +1,62 @@
-<p id="notice"><%= notice %></p>
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Server login information</b></h3>
 
-<h1>Sshkeys</h1>
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+<% if @server_id == '' %>
+<p> Your server account is not ready yet.</p>
+<p><%= link_to 'Upload your ssh key', new_sshkey_path %> for your server account to be created. If you recently uploaded your key, please note that it takes about five minutes for the account to get ready.</p>
+<% else %>
+<p><b>Your user ID:</b> <%=@server_id %></p>
+<p>You can log into the following servers.</p>
+<table class="table">
+<tr><th class="thead-inverse">Purpose</th><th>Login instruction</td></tr>
+<tr><td>Learning R, python</td><td>ssh -p 2232 <%=@server_id %>@coding4medicine.com</td></tr>
+<tr><td>Genome assembly</td><td>ssh -p 2230 <%=@server_id %>@coding4medicine.com</td></tr>
+<tr><td>RNAseq</td><td>ssh -p 2231 <%=@server_id %>@coding4medicine.com</td></tr>
+</table>
+<% end %>
 
-<table>
-  <thead>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+
+
+
+      <!-- Default box -->
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title"><b>Uploaded public keys</b></h3>
+
+          <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+              <i class="fa fa-minus"></i></button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+              <i class="fa fa-times"></i></button>
+          </div>
+        </div>
+        <div class="box-body">
+
+<%= link_to 'Upload new public key', new_sshkey_path %> <br>
+<table class="table">
+  <thead class="thead-inverse">
     <tr>
-      <th>User</th>
-      <th>Key</th>
+      <th>SSH key</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @sshkeys.each do |sshkey| %>
       <tr>
-        <td><%= sshkey.user_id %></td>
         <td><%= sshkey.key %></td>
         <td><%= link_to 'Show', sshkey %></td>
         <td><%= link_to 'Edit', edit_sshkey_path(sshkey) %></td>
@@ -24,6 +66,11 @@
   </tbody>
 </table>
 
-<br>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
 
-<%= link_to 'New Sshkey', new_sshkey_path %>
+
+
+
